[project]
name = "refl1d"
dynamic = ["version"]
description = "Neutron and X-ray reflectometry analysis"
readme = "README.rst"
authors = [
    { name = "Paul Kienzle", email = "paul.kienzle@nist.gov" },
    { name = "Brian Maranville", email = "brian.maranville@nist.gov" },
    { name = "Andrew Caruana", email = "andrew.caruana@stfc.uk" },
    { name = "Mathieu Doucet", email = "doucetm@ornl.gov" },
]
license = { file = "LICENSE.txt" }
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: BSD License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Topic :: Scientific/Engineering :: Chemistry",
    "Topic :: Scientific/Engineering :: Physics",
]
requires-python = ">=3.9"
dependencies = [
    "bumps>=1.0.0a8",
    "matplotlib",
    "numba",
    "numpy",
    "periodictable",
    "scipy",
]

[project.optional-dependencies]
dev = [
    "pre-commit",
    "pydantic",
    "pytest",
    "pytest-cov",
    "ruff",
    "sphinx",
    "versioningit",
]
full = ["wxpython", "ipython"]
webview = ["bumps[webview]"]

[project.urls]
documentation = "https://refl1d.github.io"
homepage = "https://refl1d.github.io"
repository = "https://github.com/reflectometry/refl1d"

[build-system]
requires = ["setuptools", "versioningit"]
build-backend = "setuptools.build_meta"

[tool.ruff]
line-length = 120
exclude = ["*.txt"]

# [tool.ruff.lint]
# select = [
#     "E",   # pycodestyle
#     "F",   # Pyflakes
#     "UP",  # pyupgrade
#     "B",   # flake8-bugbear
#     "SIM", # flake8-simplify
#     "I",   # isort
# ]

[tool.setuptools.dynamic]
version = { attr = "refl1d.__version__" }

[tool.setuptools]
script-files = ["bin/refl1d_cli.py", "bin/refl1d_gui.py"]

[tool.setuptools.packages.find]
where = ["."]

[project.scripts]
refl1d = "refl1d.main:cli"
refl1d-webview = "refl1d.webview.server.webserver:main"

[tool.pytest.ini_options]
addopts = "--doctest-modules --doctest-glob=*.rst --cov=refl1d"
doctest_optionflags = ["ELLIPSIS", "NORMALIZE_WHITESPACE"]
testpaths = ["refl1d", "tests", "doc/getting_started", "doc/guide"]
norecursedirs = ["view", "mystic", "bin", "webview/client", "explore"]
python_files = ["*.py"]
python_classes = ["NoClassTestsWillMatch"]
python_functions = ["test", "*_test", "test_*"]

[tool.versioningit.vcs]
method = "git"
default-tag = "0.0.1"

[tool.versioningit.write]
file = "refl1d/_version.py"
